# fast_io

./: .gitignore
benchmark/0011.containers/deque/: .test_prop.toml
benchmark/0011.containers/deque/0000.initialization/: fast_io.cc  std.cc
benchmark/0011.containers/deque/0001.push_back/: fast_io.cc  fast_io_reverse.cc  fast_io_vec.cc  fast_io_vec_reserve.cc  std.cc
benchmark/0011.containers/deque/0002.multi_push_back/: fast_io.cc  std.cc
benchmark/0011.containers/deque/0003.insert_range/: fast_io.cc  std.cc
benchmark/0011.containers/deque/0004.push_front/: fast_io.cc  std.cc
benchmark/0011.containers/deque/0005.asm/: erase_fast_io.cc  erase_fast_io.s  erase_std.cc  erase_std.s
benchmark/0011.containers/deque/0005.indexing/: fast_io.cc  fast_io_index_unchecked.cc  fast_io_vec.cc  fast_io_vec_reserve.cc  fast_io_vec_unchecked.cc  std.cc
benchmark/0011.containers/deque/0006.sort/: fast_io.cc  fast_io_vec.cc  std.cc
benchmark/0019.formatting/: CMakeLists.txt
benchmark/0020.teju_vs_dragonbox/: CMakeLists.txt
benchmark/0021.io/: CMakeLists.txt  file_vs_stdio.cc
benchmark/0022.from_chars/: CMakeLists.txt  atoi_vs_from_chars.cc  atoi_vs_from_chars_hex.cc
docs/: footer.html  index.html  style.css  sw-register.js  sw.js
docs/docs/: 01.helloworld.html  02.aplusb.html  03.pointer.html  04.fileio.html  05.filetypelayers.html  examples.html  intro.html
docs/docs/01.helloworld/: index.html
docs/docs/01.io/: index.html
docs/docs/01.io/01.helloworld/: index.html
docs/docs/01.io/02.aplusb/: index.html
docs/docs/01.io/03.pointer/: index.html
docs/docs/01.io/04.fileio/: index.html
docs/docs/01.io/05.filetypelayers/: index.html
docs/docs/02.aplusb/: index.html
docs/docs/02.dsal/: index.html
docs/docs/02.dsal/01.string/: index.html
docs/docs/03.pointer/: index.html
docs/docs/04.fileio/: index.html
docs/docs/05.filetypelayers/: index.html
docs/docs/intro/: index.html
examples/: .test_prop.toml
examples/0002.a+b/: .test_prop.toml  base36_a+b_iomnp.cc
examples/0003.manipulators/: pointer.cc
examples/0013.graph/shortest_path/: spfa_optimize_fastio_bitvec.cc
examples/0014.random/: password.cc  pin12.cc  specialpassword.cc
examples/0035.process/: args_envs.cc  pipe.cc  process.cc
examples/0036.at/: readlink.cc
examples/0039.gen_win32_mangling/: prebuild.cc
examples/0040.thread/: thread.cc
examples/0042.scn_ip_port/: ipv6.cc
fuzzing/0007.containers/bitvec/: bitvec.cc
fuzzing/0007.containers/btree/: str_btree_erase.cc
fuzzing/0007.containers/deque/: fuzz_deque.cc  fuzz_deque_clear.cc  fuzz_deque_erase.cc  fuzz_deque_insert.cc
include/: fast_io_hosted.h
include/fast_io_core_impl/char_category/: char_category.h  char_category_traits.h
include/fast_io_core_impl/freestanding/: algorithm.h
include/fast_io_core_impl/integers/: crypto_hash.h  impl.h
include/fast_io_core_impl/linux_statx_definitions/: linux_statx.h
include/fast_io_core_impl/socket/: addrscn.h
include/fast_io_dsal/: bitvec.h
include/fast_io_dsal/impl/: bitvec.h  deque.h  freestanding.h  list.h  str_btree_set.h
include/fast_io_dsal/impl/misc/: push_macros.h
include/fast_io_hosted/threads/thread/: impl.h
share/fast_io/fast_io_inc/hosted/: win32.inc
tests/0011.manipulators/: fieldptrvw.cc
tests/0016.address_sanitizer/: reallocate_n.cc
tests/0026.container/0002.list/: list_init_rvalue.cc  list_is_single.cc  list_iter.cc  list_move.cc
tests/0026.container/0003.deque/: .test_prop.toml  clear.cc  clear_destroy.cc  erase.cc  insert_range.cc  iterator.cc  moveops.cc  test_deque.cc  test_push_back.cc  test_push_front.cc
tests/0026.container/0003.deque/constructors/: copy_assignment.cc  copy_constructor.cc  from_range.cc  initializer_list.cc  n.cc  n_for_overwrite.cc
tests/0026.container/0013.str_btree_set/: str_btree_erase.cc  str_btree_set.cc
tests/0026.container/0014.bitvec/: bitvec.cc  insert_index_range.cc
